--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,45 @@
 @import "reset.css";
+@import "fonts.css";
+/*main styles*/
+body {
+	background-color: #f9f9f9;
+}
+.wrapper {
+	width: 1060px;
+	background-color: #fff;
+	margin: 0 auto;
+	padding: 50px 45px 60px;
+	-webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+		 -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+					box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+}
+/*header*/
+/*primary-nav*/
+.primary-nav {
+	margin: 40px 0;
+	background-color: #535252;
+	background: rgb(94,94,94);
+  background: -webkit-linear-gradient(rgb(94,94,94) 0%, rgb(68,67,67) 100%);
+  background: -o-linear-gradient(rgb(94,94,94) 0%, rgb(68,67,67) 100%);
+  background: linear-gradient(rgb(94,94,94) 0%, rgb(68,67,67) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5e5e5e', endColorstr='#444343',GradientType=0 );
+}
+.primary-nav li {
+	display: inline-block;
+}
+.primary-nav a {
+	font-family: "OpenSansRegular", arial, sans-serif;
+	color: #fff;
+	text-decoration: none;
+	display: block;
+	padding: 12px 25px;
+	margin-right: 40px;
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
+	text-shadow: 1px 1px 1px rgba(58, 58, 58, 1);
+}
+.primary-nav a:hover {
+	background-color: #474747;
+	border-left: 1px solid #838383;
+	border-right: 1px solid #838383;
+}
