--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 /*main styles*/
 body {
 	background-color: #f9f9f9;
+	font-family: "OpenSansRegular", arial, sans-serif;
+}
+a {
+	text-decoration: none;
 }
 .wrapper {
 	width: 1060px;
@@ -28,9 +32,7 @@ body {
 	display: inline-block;
 }
 .primary-nav a {
-	font-family: "OpenSansRegular", arial, sans-serif;
 	color: #fff;
-	text-decoration: none;
 	display: block;
 	padding: 12px 25px;
 	margin-right: 40px;
@@ -42,4 +44,30 @@ body {
 	background-color: #474747;
 	border-left: 1px solid #838383;
 	border-right: 1px solid #838383;
+}
+/*main*/
+.goods {
+	width: 240px;
+	margin-right: 45px;
+}
+.goods ul {
+	border: 1px solid #c8c8c8;
+}
+.goods li {
+	border-bottom: 1px solid #c8c8c8;
+}
+.goods li:last-child{
+	border-bottom: none;
+}
+.goods a {
+	display: block;
+	font-size: 14px;
+	padding: 15px 25px 10px;
+	color: #656363;
+}
+a.active,
+.goods a:hover {
+	color: #2c2c2c;
+	padding-left: 35px;
+	background-color: #f9f9f9;
 }
