--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,32 @@ a.active,
 	padding-bottom: 20px;
 	line-height: 22px;
 }
+/*footer*/
+.footer {
+	background-color: #e1e1e1;
+	line-height: 40px;
+}
+.footer-nav {
+	float: left;
+}
+.footer-nav li{
+	display: inline-block;
+}
+.footer-nav a {
+	font-size: 14px;
+	color: #2c2c2c;
+	margin-left: 90px;
+}
+.footer-nav a.activ,
+.footer-nav a:hover {
+	text-decoration: underline;
+}
+.footer-nav a:first-child {
+	margin-left: 25px;
+}
+.copyright {
+	float: right;
+	margin-right: 25px;
+	font-size: 14px;
+	color: #2c2c2c;
+}
